# literature_agent

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  __init__.py  demo_data_preprocessing.py  main.py  main_stage2.py  pyproject.toml  requirements.txt  setup.py  setup.sh  test_data_preprocessing.py
agents/: __init__.py  analysis_agent.py  data_preprocessing_agent.py  deep_analysis_agent.py  planning_agent.py  report_agent.py  screening_agent.py
core/: agent.py  llm.py  message.py  progress_tracker.py  tool_aware_agent.py
docs/: deployment.md  quick_start.md
tools/: deep_analysis_tool.py  extraction_tool.py  ocr_tool.py  pdf_process_tool.py  screening_tool.py
